--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1>To mandate or not to mandate?</h1>
       <h2>Public preferences for vaccine mandates in Australia and international comparators: A discrete choice experiment</h2>
       <p>
-        <strong>Brief Background:</strong> Government COVID‑19 vaccine mandates in Australia and internationally have included employment mandates (only vaccinated persons work) and public space mandates (vaccination required for access to events, entertainment, and hospitality venues). This study aims to quantify public preferences and trade‑offs among key features of future vaccine mandates.
+        <strong>Brief Background:</strong> Government COVID‑19 vaccine mandates in Australia and internationally have included employment mandates (only vaccinated persons work) and public space mandates (vaccination required for access to events, entertainment, and hospitality venues). This study aims to quantify public preferences and trade‑offs among key features of vaccine mandates.
       </p>
     </header>
 
